--- a/meetups-in-space/app/views/meetups/index.erb
+++ b/meetups-in-space/app/views/meetups/index.erb
@@ -1,1 +1,7 @@
 <h1>Meetups</h1>
+
+<ul>
+  <% @meetups_list.each do |meetup| %>
+    <li><a href="/meetups/<%= meetup.id %>"><%= meetup.name %></a></li>
+    <% end %>
+</ul>
